syntax = "proto3";

package proto.time;

option java_package = "com.hrb.holidays.proto.time";
option java_multiple_files = true;

message LocalTime {
  int32 hours = 1;
  int32 minutes = 2;
  int32 seconds = 3;
  int32 nanos = 4;
}

message LocalDate {
  int32 year = 1;
  int32 month = 2;
  int32 day = 3;
}
